# skat

./: README.md  skat.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Card.hs  Game.hs  Main.hs  Player.hs
