cabal-version:      3.0
name:               skat
version:            0.1.0.0
synopsis:           A Skat card game implementation
description:        A Haskell implementation of the German card game Skat
license:           MIT
author:            Author
maintainer:        maintainer@example.com
build-type:        Simple

executable skat
    main-is:          Main.hs
    other-modules:    Game
                    , Card
                    , Player
    build-depends:    base ^>=4.17.2.0
                    , random
                    , containers
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
